@@ -3,7 +3,7 @@ use warnings;
 package App::rdfns;
 #ABSTRACT: quickly get common URI namespaces
 #VERSION
-$App::rdfns::VERSION = '20140909';
+$App::rdfns::VERSION = '20140910';
 use v5.10;
 
 use RDF::NS;
@@ -94,7 +94,7 @@ App::rdfns - quickly get common URI namespaces
 
 =head1 VERSION
 
-version 20140909
+version 20140910
 
 =head1 SEE ALSO
 
