@@ -2,7 +2,7 @@ use strict;
 use warnings;
 package RDF::NS::Trine;
 #ABSTRACT: Popular RDF namespace prefixes from prefix.cc as RDF::Trine nodes
-$RDF::NS::Trine::VERSION = '20140909';
+$RDF::NS::Trine::VERSION = '20140910';
 use v5.10;
 use RDF::Trine::Node::Resource;
 use RDF::Trine::Node::Blank;
@@ -32,12 +32,12 @@ RDF::NS::Trine - Popular RDF namespace prefixes from prefix.cc as RDF::Trine nod
 
 =head1 VERSION
 
-version 20140909
+version 20140910
 
 =head1 SYNOPSIS
 
   use RDF::NS::Trine;
-  use constant NS => RDF::NS::Trine->new('20140909');
+  use constant NS => RDF::NS::Trine->new('20140910');
 
   NS->foaf_Person;        # iri('http://xmlns.com/foaf/0.1/Person')
   NS->uri('foaf:Person);  #  same RDF::Trine::Node::Resource
