@@ -1,3 +1,7 @@
+20140910 2014-0910 (1415 prefixes)
+
+ - fixed deterministic short names
+
 20140909 2014-099  (1415 prefixes)
  - added:   opllic
 
